<resources>
    <string name="app_name">Bill Money App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categoria">Categories</string>
    <string name="menu_metodos">Add Movement</string>

    <string name="home_second">Home Second</string>
    <string name="Ttitle_app">Bill Money App</string>

    <string name="Avisos">Alert</string>
    <string name="Ingresar">ingresar</string>
    <string name="recordatorio">Ingrese su recordatorio</string>
    <string name="recordatori">Ingrese la fecha</string>
    <string name="ingreso">Ingrese la fecha</string>
    <string name="date">"Fecha: 28/05/20"</string>

    <string-array name="categories">
        <item>Transporte</item>
        <item>Hogar</item>
        <item>Ropa</item>
        <item>Mascota</item>
        <item>Entretenimiento</item>
        <item>Compras</item>
        <item>Automovil</item>
        <item>Salud</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login44">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="reset">Reset</string>
</resources>
