<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardActivity"
            android:icon="@drawable/ic_icon"
            android:title="Dashboard" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_web"
            android:title="@string/menu_categoria" />
        <item
            android:id="@+id/nav_metodos"
            android:icon="@drawable/ic_anadir"
            android:title="@string/menu_metodos" />
        <item
            android:id="@+id/nav_avisos"
            android:icon="@drawable/ic_alert"
            android:title="@string/Avisos" />
    </group>
</menu>
