<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.menu_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_categoria"
            app:destination="@id/nav_categoria" />
    </fragment>

    <fragment
        android:id="@+id/nav_categoria"
        android:name="com.example.menu_app.ui.gallery.CategoriFragment"
        android:label="@string/menu_categoria"
        tools:layout="@layout/fragment_categoria" />

    <fragment
        android:id="@+id/nav_metodos"
        android:name="com.example.menu_app.ui.slideshow.MetodosFragment"
        android:label="@string/menu_metodos"
        tools:layout="@layout/fragment_metodos" >
        <action
            android:id="@+id/action_nav_metodos_to_nav_categoria"
            app:destination="@id/nav_categoria" />
    </fragment>

    <fragment
        android:id="@+id/nav_avisos"
        android:name="com.example.menu_app.ui.avisos.AvisosFragments"
        android:label="Alert"
        tools:layout="@layout/fragment_avisos" />
</navigation>