<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#F44336"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_foreground_icon_master"
        tools:layout_conversion_absoluteHeight="116dp"
        tools:layout_conversion_absoluteWidth="130dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-21dp" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="65dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/Ttitle_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        app:fontFamily="@font/andika"
        tools:layout_conversion_absoluteHeight="65dp"
        tools:layout_conversion_absoluteWidth="300dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="185dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="160dp" />

</LinearLayout>
